--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 /* Root styles */
 
 html, body {
-    height: 100%;
+    /*height: 100%;*/
 }
 
 #root {
@@ -19,10 +19,16 @@ html, body {
     justify-content: space-between;
 }
 
+hr {
+    width: 100%;
+    border: 0;
+    border-top: 1px solid #ddd;
+}
+
 /* Page header styles */
 
 .page-header {
-    padding: 3% 3% 2% 3%;
+    padding: 3% 3% 3% 3%;
     display: flex;
 }
 
@@ -65,7 +71,8 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
+    align-items: center;
+    gap: 30px;
 }
 
 .about {
@@ -74,10 +81,98 @@ html, body {
     text-align: center;
 }
 
+    /* Designs styles */
+
+    .designs {
+        padding: 0 5%;
+        display: flex;
+        justify-content: space-evenly;
+        gap: 5%;
+    }
+
+    .designs-image {
+        height: 100%;
+        max-height: 480px;
+        width: 100%;
+        max-width: 480px;
+        flex: 1;
+        border: 1px solid #888;
+        border-radius: 5px;
+    }
+
+    .designs-info {
+        font-family: Palatino, Verdana, 'Times New Roman';
+        font-size: 20px;
+        color: #0f0f0f;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: flex-start;
+        gap: 15px;
+        flex: 1;
+    }
+
+    .purchase-buttons {
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .purchase-button {
+        width: fit-content;
+        font-size: 14px;
+        color: white;
+        text-transform: uppercase;
+        padding: 8px 14px;
+        border-radius: 20px;
+        text-decoration: none;
+    }
+
+    .purchase-button-strikkeland {
+        background-color: rgb(76, 114, 226);
+    }
+
+    .purchase-button-strikkeland:hover {
+        background-color: rgb(96, 134, 246);
+    }
+
+    .purchase-button-ravelry {
+        background-color: rgb(222, 114, 102);
+    }
+
+    .purchase-button-ravelry:hover {
+        background-color: rgb(242, 134, 122);
+    }
+
+    /* Instagram feed styles */
+
+    .instagram-feed {
+        width: 100%;
+        max-width: 750px;
+    }
+
+    .instagram-feed a {
+        text-decoration: none;
+    }
+
+    .instagram-feed a:hover {
+        text-decoration: underline;
+    }
+
+    .instagram-feed h1 {
+        font-family: Palatino, Verdana, 'Times New Roman';
+        font-size: 25px;
+        color: #0f0f0f;
+        text-align: center;
+        text-transform: uppercase;
+    }
+
 /* Page footer styles */
 
 .page-footer {
-    padding: 30px;
+    padding: 3%;
     font-family: Palatino, Verdana, 'Times New Roman';
     font-size: 14px;
     text-transform: uppercase;
@@ -101,8 +196,31 @@ html, body {
         font-size: 32px;
     }
 
+    .page-content {
+        padding: 0 3%;
+    }
+
     .about {
         font-size: 16px;
     }
 
+    .designs {
+        flex-direction: column-reverse;
+    }
+
+    .designs-info {
+        font-size: 16px;
+    }
+
+    .designs-info h1 {
+        font-size: 24px;
+    }
+
+    .instagram-feed h1 {
+        font-size: 20px;
+    }
+
+    .purchase-buttons {
+        flex-direction: column;
+    }
 }
