--- a/src/styles.css
+++ b/src/styles.css
@@ -7,10 +7,6 @@
 
 /* Root styles */
 
-html, body {
-    /*height: 100%;*/
-}
-
 #root {
     background-color: #fdfdfd;
     height: 100%;
@@ -53,8 +49,8 @@ hr {
 }
 
 .page-title {
-    font-family: Palatino, Verdana, 'Times New Roman';
-    font-size: 40px;
+    font-family: Palatino, 'Times New Roman', serif;
+    font-size: 45px;
     line-height: .8;
     color: #0f0f0f;
     text-transform: uppercase;
@@ -75,105 +71,11 @@ hr {
     gap: 30px;
 }
 
-.about {
-    font-family: Palatino, Verdana, 'Times New Roman';
-    font-size: 20px;
-    text-align: center;
-}
-
-    /* Designs styles */
-
-    .designs {
-        padding: 0 5%;
-        display: flex;
-        justify-content: space-evenly;
-        gap: 5%;
-    }
-
-    .designs-image {
-        height: 100%;
-        max-height: 480px;
-        width: 100%;
-        max-width: 480px;
-        flex: 1;
-        border: 1px solid #888;
-        border-radius: 5px;
-    }
-
-    .designs-info {
-        font-family: Palatino, Verdana, 'Times New Roman';
-        font-size: 20px;
-        color: #0f0f0f;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: flex-start;
-        gap: 15px;
-        flex: 1;
-    }
-
-    .purchase-buttons {
-        width: 100%;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 10px;
-    }
-
-    .purchase-button {
-        width: fit-content;
-        font-size: 14px;
-        color: white;
-        text-transform: uppercase;
-        padding: 8px 14px;
-        border-radius: 20px;
-        text-decoration: none;
-    }
-
-    .purchase-button-strikkeland {
-        background-color: rgb(76, 114, 226);
-    }
-
-    .purchase-button-strikkeland:hover {
-        background-color: rgb(96, 134, 246);
-    }
-
-    .purchase-button-ravelry {
-        background-color: rgb(222, 114, 102);
-    }
-
-    .purchase-button-ravelry:hover {
-        background-color: rgb(242, 134, 122);
-    }
-
-    /* Instagram feed styles */
-
-    .instagram-feed {
-        width: 100%;
-        max-width: 750px;
-    }
-
-    .instagram-feed a {
-        text-decoration: none;
-    }
-
-    .instagram-feed a:hover {
-        text-decoration: underline;
-    }
-
-    .instagram-feed h1 {
-        font-family: Palatino, Verdana, 'Times New Roman';
-        font-size: 25px;
-        color: #0f0f0f;
-        text-align: center;
-        text-transform: uppercase;
-    }
-
 /* Page footer styles */
 
 .page-footer {
     padding: 3%;
-    font-family: Palatino, Verdana, 'Times New Roman';
+    font-family: Baskerville, Garamond, 'Times New Roman', serif;
     font-size: 14px;
     text-transform: uppercase;
     display: flex;
@@ -182,10 +84,14 @@ hr {
 
 /* Mobile styles */
 
-@media (max-width: 480px) {
+@media (max-width: 720px) {
 
     #root {
         justify-content: space-around;
+    }
+
+    .page-header {
+        padding: 22px 0;
     }
 
     .page-header-left, .page-header-right {
@@ -198,29 +104,5 @@ hr {
 
     .page-content {
         padding: 0 3%;
-    }
-
-    .about {
-        font-size: 16px;
-    }
-
-    .designs {
-        flex-direction: column-reverse;
-    }
-
-    .designs-info {
-        font-size: 16px;
-    }
-
-    .designs-info h1 {
-        font-size: 24px;
-    }
-
-    .instagram-feed h1 {
-        font-size: 20px;
-    }
-
-    .purchase-buttons {
-        flex-direction: column;
     }
 }
