--- a/src/components/PatternList.css
+++ b/src/components/PatternList.css
@@ -2,11 +2,11 @@
 /* Pattern list */
 
 .patternList {
-    padding: 4%;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    gap: 5%;
+    gap: 30px;
 }
 
 /* Pattern */
@@ -14,7 +14,7 @@
 .pattern {
     display: flex;
     justify-content: space-evenly;
-    gap: 5%;
+    gap: 25px;
 }
 
 .pattern:nth-child(even) {
@@ -36,7 +36,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    gap: 30px;
+    gap: 25px;
     flex: 1;
 }
 
@@ -97,7 +97,14 @@
 
 /* Mobile styles */
 
-@media (max-width: 720px) {
+@media (max-width: 1200px) {
+    .pattern-image {
+        max-height: 350px;
+        max-width: 350px;
+    }
+}
+
+@media (max-width: 860px) {
     .pattern, .pattern:nth-child(even) {
         flex-direction: column;
         align-items: center;
@@ -108,11 +115,11 @@
     }
 
     .pattern-info h1 {
-        font-size: 24px;
+        font-size: 26px;
     }
 
     .pattern-info p {
-        font-size: 16px;
+        font-size: 18px;
     }
 
     .purchase-buttons {
@@ -120,7 +127,7 @@
     }
 
     .purchase-button {
-        font-size: 11px;
+        font-size: 12px;
         padding: 6px 12px;
     }
 }
