--- a/src/styles.css
+++ b/src/styles.css
@@ -63,12 +63,14 @@ hr {
 /* Page content styles */
 
 .page-content {
-    padding: 0 10%;
+    margin: 0 auto;
+    padding: 0 70px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 30px;
+    max-width: 1400px;
 }
 
 /* Page footer styles */
@@ -84,7 +86,7 @@ hr {
 
 /* Mobile styles */
 
-@media (max-width: 720px) {
+@media (max-width: 860px) {
 
     #root {
         justify-content: space-around;
@@ -103,6 +105,6 @@ hr {
     }
 
     .page-content {
-        padding: 0 3%;
+        padding: 0 10px;
     }
 }
